assets/styles/style.css
/* .dm-mono-light {
    font-family: "DM Mono", monospace;
    font-weight: 300;
    font-style: normal;
  }
  
  .dm-mono-regular {
    font-family: "DM Mono", monospace;
    font-weight: 400;
    font-style: normal;
  }
  
  .dm-mono-medium {
    font-family: "DM Mono", monospace;
    font-weight: 500;
    font-style: normal;
  }
  
  .dm-mono-light-italic {
    font-family: "DM Mono", monospace;
    font-weight: 300;
    font-style: italic;
  }
  
  .dm-mono-regular-italic {
    font-family: "DM Mono", monospace;
    font-weight: 400;
    font-style: italic;
  }
  
  .dm-mono-medium-italic {
    font-family: "DM Mono", monospace;
    font-weight: 500;
    font-style: italic;
  }

  // <uniquifier>: Use a unique and descriptive class name
  // <weight>: Use a value from 100 to 1000

.dm-sans-<uniquifier> {
  font-family: "DM Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
}

.bebas-neue-regular {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-style: normal;
  }
   */

/* Start of about page css */



header {
  display: flex;
  outline: .5px solid #232323;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 64px;
  flex-shrink: 0;
  border-radius: 15px;
  background: #000;
  box-shadow: 0px 2px 40.9px -12px rgba(0, 0, 0, 0.25);
}

.logo {
  color: #FFF;
  font-family: "Bebas Neue";
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin-left: 1rem;
}

.navbar, .mobile-navbar {
  color: #FFF;
  font-family: "DM Sans";
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  text-decoration: none;
  margin-right: 1.5rem;
  cursor: pointer;
  z-index: 1;
}

.mobile-nav{
  display: none;
}

.navbar:hover {
 text-decoration: underline; 
 /* font-weight: bold; */
}

.heroimg {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  width: 100%;
  height: 791px;
  flex-shrink: 0;
  z-index: -1;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.41) 0%, rgba(0, 0, 0, 0.41) 100%), url(../images/hero-img.png) lightgray 50% / cover no-repeat;
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
}

/* .heroimg img {
  height: 100%;
  width: 100%;
  
}

.hero-img-background {
  object-fit: cover;
} */

.hero-text {
  width: 40%;
  color: #FFF;
  text-align: center;
  font-family: "Bebas Neue";
  font-size: 48px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.about-section {
  display: flex;
  height: 1066px;
  padding: 257px 257px 0 257px;
  margin-top: 713px;
  margin-bottom: 0px;
  justify-content: center;
  align-items: flex-start;
  gap: 6rem;
}

blockquote {
  color: #7D7C7C;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: italic;
  font-weight: 400;
  line-height: normal;
  letter-spacing: 0.32px;
  margin-left: 0;
  width: 100%;
}

.about-section h3 {
  color: #7D7C7C;
  font-family: "DM Mono";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
  margin: 0;
  padding: 0;
  width: fit-content;
}

.container {
  width: 26%;
}

.about-me-section {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 23%;
  margin: 0;
  padding: 0;
  padding-top: 0;
}

.about-me-section p {
  color: #404040;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
  padding: 0;
  margin-bottom: 1rem;
  text-wrap: pretty;
}

.digital {
  text-wrap: nowrap;
  width: fit-content;
}
.digital li {
  list-style-type: none;
  margin-top: 1.5rem;
  color: #020202;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
}

.digital ul {
  padding-left: 0;
}

.brand {
  margin-top: 4rem;
  text-wrap: nowrap;
  width: fit-content;
}
.brand li {
  list-style-type: none;
  margin-top: 1.5rem;
  color: #020202;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
}

.brand ul {
  padding-left: 0;
}

.line-seperator {
  width: 100%;
  height: 1px;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 16px auto;
}

.line-seperator img {
  height: 100%;
  width: 100%;
}

.contact-section {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 60%;
  
}


.contact-section h2 {
  color: #000;
  text-align: center;
  font-family: "DM Sans";
  font-size: 48px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  margin-top: 3.2rem;
}

.contact-section h3 {
  color: #7D7C7C;
  font-family: "DM Mono";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
  margin: 0;
  padding: 0;
  width: fit-content;
}


.contact-section li {
  list-style-type: none;
  margin-top: 1.5rem;
  color: #020202;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
}


.contact-section ul {
  margin-top: 0;
  padding-left: 0;
}

.contact-section, .contact-links ul li a {
  text-decoration: none;
  color: black;
}

.contact-links, .experience {
  margin-top: 4rem;
}

.experience {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  height: fit-content;
}

.resume {
  color: #020202;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: italic;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 0.32px;
  text-decoration-line: underline;
  margin-top: 4rem;
}

.resume:active {
  color: rgb(0, 158, 21);
}

.resume-button {
  display: none;
  margin-top: 2rem;
  flex-grow: 1;
}

footer {
  display: flex;
  height: 3.5rem;
  width: 90%;
  justify-content: space-between;
  align-items: center;
  border-top: solid 1px;
  margin-top: 8rem;
}

nav {
  display: flex;
  justify-content: center;
  align-items: center;
  width: fit-content;
  gap: 1.5rem;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer h2 {
  color: #000;
  font-family: "Bebas Neue";
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

footer a {
  text-decoration: none;
  color: #000;
  font-family: "DM Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

footer a:hover {
  text-decoration: underline;
}

.mobile-menus {
  display: none;
}

.mobile-links {
  display: none;
}

@media only screen and (max-width: 1440px) {

  .hero-text {
      width: 50%;
  }

  .about-section {
    padding: 18rem 0 0 0;
  }

}

@media only screen and (max-width: 1100px) {
  .hero-text {
    width: 70%;
  }

  .about-section img {
    height: 90%;
    width: 94%;
  }

  .contact-section {
    gap: 4rem;
    width: 75%;
  }
}

@media only screen and (max-width: 900px) {
  header {
    height: 48px;
    flex-shrink: 0;
  }

  header nav {
    gap: 0;
  }

  footer nav a{
    font-size: 16px;
  }

  .hero-text {
    font-size: 40px;
  }

  .logo {
    font-size: 24px;
  }

  .logo-footer {
    font-size: 24px;
  }

  .navbar {
    font-size: 16px;
  }

  .about-section p{
    font-size: 14px;
    gap: 3rem;
  }

  .about-section {
    gap: 3rem;
  }

  .container blockquote {
    font-size: 14px;
  }

  .digital h3 {
    font-size: 14px;
  }

  .brand h3 {
    font-size: 14px;
  }

  .digital li {
    font-size: 14px;
  }

  .brand li {
    font-size: 14px;
  }

  .about-me-section {
    width: 26%;
  }

  .contact-section {
    gap: 4rem;
    width: 90%;
  }

  .contact-section h2 {
    font-size: 32px;
  }

  .contact-links h3 {
    font-size: 14px;
  }

  .contact-links li {
    font-size: 14px;
  }

  .experience h3 {
    font-size: 14px;
  }

  .experience li {
    font-size: 14px;
  }

  .resume {
    font-size: 14px;
  }

  .about-me-section h3 {
    font-size: 14px;
  }
}

@media only screen and (max-width: 768px) {
  .hero-text {
    width: 80%;
  }

  .about-section {
    font-size: 12px;
    gap: 2rem;
  }

  .resume {
    display: none;
  }

  .resume-button {
    display: flex;
    width: 161px;
    height: 45px;
    flex-shrink: 0;
    border-radius: 25px;
    background: #000;
    color: white;
    justify-content: center;
    align-items: center;
    justify-self: center;
  }

  .social-links {
    display: none;
  }
  
  .mobile-links {
    display: flex;
  }

  .contact-section h2 {
    font-size: 32px;
  }

  .contact-links h3 {
    font-size: 14px;
  }

  .contact-links li {
    font-size: 14px;
  }

  .experience h3 {
    font-size: 14px;
  }

  .experience li {
    font-size: 14px;
  }

  .resume {
    font-size: 14px;
  }
  footer nav a{
    font-size: 16px;
  }

  .hero-text {
    font-size: 40px;
  }

  .logo {
    font-size: 24px;
  }

  .logo-footer {
    font-size: 24px;
  }

  .navbar {
    font-size: 16px;
  }

  .about-section p{
    font-size: 14px;
    gap: 3rem;
  }
}

@media only screen and (max-width: 645px) {
  .navbar {
    display: flex;
    border-bottom: solid 1px #7D7C7C;
    width: 100%;
    justify-content: center;
    height: 45px;
    align-items: center;
    margin-right: 0;
  }

  #mobile-menu-exit {
    display: none;
  }
  .navbar:active {
    background-color: #404040;
  }

  .mobile-menus {
    display: block;
    margin-right: 1rem;
  }

  header {
    position: relative;
    align-items: center;
    z-index: 100;
    background: black;
    outline: .5px solid #232323;
  }

   header nav {
    position: fixed;
    z-index: 0;
    margin: 1rem;
    width: 90%;
    left: -2.7px;
    top: 3rem;
    background: #2F2F2F;
    height: 25vh;
    padding: 1rem;
    justify-self: center;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    border-radius: 15px;
    display: none;
  }

  .menu-btn {
    display: block;
  }

  .heroimg {
    width: 800px;
    height: 397px;
  }

  .hero-text {
    font-size: 24px;
    width: 50%;
  }

  .about-section {
    margin-top: 25%;
    height: 50%;
  }

  .contact-section h2 {
    font-size: 32px;
  }

  .contact-links h3 {
    font-size: 12px;
  }

  .contact-links li {
    font-size: 12px;
  }

  .experience h3 {
    font-size: 12px;
  }

  .experience li {
    font-size: 12px;
  }

  .navbar {
    font-size: 12px;
  }

  .about-section p{
    font-size: 12px;
    gap: 3rem;
  }

  .about-me-section h3 {
    font-size: 12px;
    text-wrap: nowrap;
  }

  .digital h3 {
    font-size: 12px;
  }

  .brand h3 {
    font-size: 12px;
  }

  .container blockquote {
    font-size: 12px;
  }

  .digital li {
    font-size: 12px;
  }

  .brand li {
    font-size: 12px;
  }

  body {
    width: 85%;
  }
  }

  @media only screen and (max-width: 430px) {
    body {
      width: 94%;
      padding: 8px;
    }

    .about-section {
      width: 100%;
      margin-top: 50%;
      margin-bottom: 0;
      height: 950px;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 390px 98px 98px;
      grid-template-areas: "container about-me-section"
                            "digital about-me-section"
                            "brand about-me-section";
    }

    .about-me-section {
      width: 100%;
    }

    .container {
      width: 100%;
    }

    header nav {
      top: 3rem;
      width: 86%;
      left: -6px;
      height: 170px;
    }

    header {
      position: fixed;
      top: 8px;
      left: 2px;
      width: 69%;
    }

    .line-seperator {
      background-color: lightgray;
    }

    .contact-section {
      gap: 2rem;
        flex-wrap: wrap;
    }

    .resume-button {
      margin-top: 45%;
    }
  }

